--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
 
     <!-- About me -->
-    <p class="text-5xl font-bold text-[#F6B17A] text-center md:pt-20 pt-10" style="font-family: cursive;">About me</p>
+    <p class="text-5xl font-bold text-[#F6B17A] text-center md:pt-20 pt-10">About me</p>
     <p class="text-center text-lg text-[#ffff] p-2 md:pr-20 md:pl-20 md:pt-2">Myself a dedicated and hardworking knowledge
         gaining student looking forward to improve myself. Has the capacity to have a good communication and coordination with others. 
         Has experience in interactive Front end web development and still learning more and also has some knowledge about programming
@@ -76,8 +76,8 @@
     </p>
 
     <!--Skills-->
-    <p class="text-5xl font-bold text-[#F6B17A] text-center md:pt-20 pt-10" id="skills" style="font-family: cursive;">Skills</p>
-    <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 md:gap-10 md:p-10 gap-4 pr-10 pl-10 mt-2">
+    <p class="text-5xl font-bold text-[#F6B17A] text-center pt-20" id="skills">Skills</p>
+    <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 md:gap-10 md:p-10 gap-4 pr-10 pl-10 mt-5">
         <div class="bg-transparent rounded-3xl transition-all duration-500 hover:shadow-lg hover:shadow-slate-50">
             <div class="bg-[#424769] text-center text-[#F6B17A] p-3 text-xl font-bold rounded-t-3xl ">
                 HTML5 & CSS3
@@ -137,7 +137,7 @@
     </div>
 
     <!--Currently learning skills-->
-    <p class="text-2xl font-bold text-[#F6B17A] text-center pt-2" style="font-family: cursive;">Currently learning skills</p>
+    <p class="text-2xl font-bold text-[#F6B17A] text-center pt-2">Currently learning skills</p>
     <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 md:gap-10 md:p-10 gap-4 pr-10 pl-10 mt-2">
         <div class="bg-transparent rounded-3xl transition-all duration-500 hover:shadow-lg hover:shadow-slate-50">
             <div class="bg-[#424769] text-center text-[#F6B17A] p-3 text-xl font-bold rounded-t-3xl ">
@@ -164,7 +164,7 @@
             </div>
         </div>
         <div class="bg-transparent rounded-3xl transition-all duration-500 hover:shadow-lg hover:shadow-slate-50">
-            <div class="bg-[#424769] text-center text-[#F6B17A] p-3 text-xl font-bold rounded-t-3xl ">
+            <div class="bg-[#424769] text-center text-[#F6B17A] p-3 text-xl font-bold rounded-t-3xl">
                 AI & ML
             </div>
             <div class=" bg-[#7077A1] rounded-b-3xl justify-center items-center flex">
@@ -174,8 +174,8 @@
     </div>
 
     <!--Projects-->
-    <p class="text-5xl font-bold text-[#F6B17A] text-center md:pt-20 pt-10" id="projects" style="font-family: cursive;">Projects</p>
-    <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 md:gap-10 md:p-10 gap-4 pr-10 pl-10 mt-2">
+    <p class="text-5xl font-bold text-[#F6B17A] text-center pt-20" id="projects">Projects</p>
+    <div class="grid lg:grid-cols-4 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 md:gap-10 md:p-10 gap-4 pr-10 pl-10 mt-5">
         <div class="bg-[#7077A1] rounded-3xl transition-all duration-500 hover:shadow-lg hover:shadow-slate-50">
             <div class="bg-[#424769] text-center text-[#F6B17A] p-3 text-xl font-bold rounded-t-3xl ">
                 Bank Loan page
@@ -231,11 +231,11 @@
     </div>
 
     <!--Hobbies-->
-    <p class="text-5xl font-bold text-[#F6B17A] text-center md:pt-20 pt-10" id="hobbies" style="font-family: cursive;">Hobbies</p>
+    <p class="text-5xl font-bold text-[#F6B17A] text-center pt-20" id="hobbies">Hobbies</p>
     <div class="grid grid-cols-1">
         <div class="flex md:flex-row flex-col items-center justify-center md:space-x-5 space-y-2 md:p-5 p-2">
             <div class="flex flex-col items-center justify-center">
-                <p class="text-4xl text-white text-center" style="font-family: cursive;">My Instagram public account for posting reels related to web design</p>
+                <p class="text-4xl text-white text-center">My Instagram public account for posting reels related to web design</p>
                 <div class="flex flex-row justify-center items-center p-2">
                     <button class="text-lg rounded-lg text-center bg-[#F6B17A] text-black p-2 pr-6 pl-6 hover:bg-white transition-all duration-500" onclick="location.href='https://www.instagram.com/sai_charan_uvaraj/'">Visit</button>
                 </div>
@@ -244,7 +244,7 @@
         </div>
         <div class="flex md:flex-row-reverse flex-col items-center justify-center md:space-x-5 space-y-2 md:p-5 p-2 mt-2">
             <div class="flex flex-col items-center justify-center">
-                <p class="text-4xl text-white text-center" style="font-family: cursive;">An intermediate level chess player</p>
+                <p class="text-4xl text-white text-center">An intermediate level chess player</p>
             </div>
             <img class="rounded-lg" src="images/chess.jpg">
         </div>
