--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <div class="grid items-center justify-center pt-10 pb-10 text-center">
             <p class="text-[#7077A1] text-3xl">Hello,</p>
             <p class="text-[#ffff] text-2xl">Myself,</p> 
-            <p class="text-[#F6B17A] text-6xl font-extrabold" style="font-family: cursive;">Sai Charan Uvaraj</p>
+            <p class="text-[#F6B17A] text-6xl font-extrabold pb-2">Sai Charan Uvaraj</p>
             <p class="text-[#ffff]  font-bold text-5xl">Aspiring Full Stack Developer</p>
         </div>
         <div class="lg:flex items-center justify-center grid gap-2 lg:gap-2">
-            <img src="images/profile1.jpg" class="lg:w-40 lg:h-40 h-80 w-80 rounded-full  border-8 border-solid border-[#F6B17A]">
+            <img src="images/profile1.jpg" class="hidden lg:block lg:w-40 lg:h-40 h-80 w-80 rounded-full border-8 border-solid border-[#F6B17A]">
             <img src="images/profile4.jpg" class="lg:w-50 lg:h-50 h-80 w-80 rounded-full  border-8 border-solid border-[#F6B17A]">
-            <img src="images/profile2.jpg" class="lg:w-40 lg:h-40 h-80 w-80 rounded-full  border-8 border-solid border-[#F6B17A]">
+            <img src="images/profile2.jpg" class="hidden lg:block lg:w-40 lg:h-40 h-80 w-80 rounded-full  border-8 border-solid border-[#F6B17A]">
         </div>
     </div>
 
