--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
                  <a class="hover:-translate-y-2/4 hover:scale-125 transition-all duration-300 active:scale-75 hover:text-white
                  active:text-white" href="#hobbies">Hobbies</a>
                 <a class="hover:-translate-y-2/4 hover:scale-125 transition-all duration-300 active:scale-75 hover:text-white
-                 active:text-white" href="#">Qualifications</a>
+                 active:text-white" href="#qualification">Qualifications</a>
                 <a class="hover:-translate-y-2/4 hover:scale-125 transition-all duration-300 active:scale-75 hover:text-white
-                active:text-white" href="#">Personal Details</a>
+                 active:text-white" href="#contact">Contact</a>
                 <a class="hover:-translate-y-2/4 hover:scale-125 transition-all duration-300 active:scale-75 hover:text-white
-                 active:text-white" href="#">Contact</a>
-                <a class="hover:-translate-y-2/4 hover:scale-125 transition-all duration-300 active:scale-75 hover:text-white
-                active:text-white" href="#">Resume</a>
+                active:text-white" href="#resume">Resume</a>
             </div>
         </div>
         <!--Mobile view-->
@@ -46,10 +44,9 @@
                 <a class="transition-all duration-300 hover:text-white active:text-white" href="#skills">Skills</a>
                 <a class="transition-all duration-300 hover:text-white active:text-white" href="#projects">Projects</a>
                 <a class="transition-all duration-300 hover:text-white active:text-white" href="#hobbies">Hobbies</a>
-                <a class="transition-all duration-300 hover:text-white active:text-white" href="#">Qualifications</a>
-                <a class="transition-all duration-300 hover:text-white active:text-white" href="#">Personal Details</a>
-                <a class="transition-all duration-300 hover:text-white active:text-white" href="#">Contact</a>
-                <a class="transition-all duration-300 hover:text-white active:text-white" href="#">Resume</a>
+                <a class="transition-all duration-300 hover:text-white active:text-white" href="#qualification">Qualifications</a>
+                <a class="transition-all duration-300 hover:text-white active:text-white" href="#contact">Contact</a>
+                <a class="transition-all duration-300 hover:text-white active:text-white" href="#resume">Resume</a>
             </div>
         </div>
     </nav>
@@ -57,8 +54,8 @@
         <div class="grid items-center justify-center pt-10 pb-10 text-center">
             <p class="text-[#7077A1] text-3xl">Hello,</p>
             <p class="text-[#ffff] text-2xl">Myself,</p> 
-            <p class="text-[#F6B17A] text-6xl font-extrabold pb-2">Sai Charan Uvaraj</p>
-            <p class="text-[#ffff]  font-bold text-5xl">Aspiring Full Stack Developer</p>
+            <p class="text-[#F6B17A] text-6xl font-extrabold pb-2">Sai Charan</p>
+            <p class="text-[#ffff]  font-bold text-4xl">Aspiring Full Stack Developer</p>
         </div>
         <div class="lg:flex items-center justify-center grid gap-2 lg:gap-2">
             <img src="images/profile1.jpg" class="hidden lg:block lg:w-40 lg:h-40 h-80 w-80 rounded-full border-8 border-solid border-[#F6B17A]">
@@ -182,8 +179,8 @@
             </div>
             <div class=" bg-[#7077A1] rounded-b-3xl flex flex-col justify-center items-center">
                 <img class="w-96 h-48 rounded-xl mt-2 mb-2 pr-2 pl-2" src="images/bank loan.jpg">
-                <p class="text-white text-lg text-center pr-2 pl-2">A basic front-end design of a bank loan page created using bootstrap
-                    cards and navbars with beautifull card hovering effects.</p>
+                <p class="text-black text-lg text-center pr-2 pl-2">A responsive front-end design of a bank loan page created using bootstrap
+                    cards and navbars with card hovering effects.</p>
                 <div class="flex flex-row justify-center items-center p-2">
                     <button class="text-lg rounded-lg text-center bg-[#F6B17A] text-black p-2 pr-6 pl-6 hover:bg-white transition-all duration-500" onclick="location.href='https://github.com/SaiCharanUvaraj/Bank-Loan-Page'">Visit</button>
                 </div>
@@ -195,7 +192,7 @@
             </div>
             <div class=" bg-[#7077A1] rounded-b-3xl flex flex-col justify-center items-center">
                 <img class="w-96 h-48 rounded-xl mt-2 mb-2 pr-2 pl-2" src="images/sign in.jpg">
-                <p class="text-white text-lg text-center pr-2 pl-2">A simple responsive front-end design of a sign-in page of a bank created using native css and bootstrap cards.</p>
+                <p class="text-black text-lg text-center pr-2 pl-2">A responsive front-end design of a sign-in page of a bank created using native css and bootstrap cards.</p>
                 <div class="flex flex-row justify-center items-center p-2">
                     <button class="text-lg rounded-lg text-center bg-[#F6B17A] text-black p-2 pr-6 pl-6 hover:bg-white transition-all duration-500" onclick="location.href='https://github.com/SaiCharanUvaraj/Sample-Sign-in-and-Sign-up-page'">Visit</button>
                 </div>
@@ -207,7 +204,7 @@
             </div>
             <div class=" bg-[#7077A1] rounded-b-3xl flex flex-col justify-center items-center">
                 <img class="w-96 h-48 rounded-xl mt-2 mb-2 pr-2 pl-2" src="images/calculator.jpg">
-                <p class="text-white text-lg text-center pr-2 pl-2">A front-end creative design of a calculator created using native css and  animations.</p>
+                <p class="text-black text-lg text-center pr-2 pl-2">A front-end creative design of a calculator created using native css and  animations.</p>
                 <div class="flex flex-row justify-center items-center p-2">
                     <button class="text-lg rounded-lg text-center bg-[#F6B17A] text-black p-2 pr-6 pl-6 hover:bg-white transition-all duration-500" onclick="location.href='https://github.com/SaiCharanUvaraj/Web-Calculator'">Visit</button>
                 </div>
@@ -219,7 +216,7 @@
             </div>
             <div class=" bg-[#7077A1] rounded-b-3xl flex flex-col justify-center items-center">
                 <img class="w-96 h-48 rounded-xl mt-2 mb-2 pr-2 pl-2" src="images/tictactoe.jpg">
-                <p class="text-white text-lg text-center pr-2 pl-2">A tic tac toe game with automatic playing bot opponents created using a python module called pygame</p>
+                <p class="text-black text-lg text-center pr-2 pl-2">A tic tac toe game with automatic playing bot opponents created using a python module called pygame</p>
                 <div class="flex flex-row justify-center items-center p-2">
                     <button class="text-lg rounded-lg text-center bg-[#F6B17A] text-black p-2 pr-6 pl-6 hover:bg-white transition-all duration-500" onclick="location.href='https://github.com/SaiCharanUvaraj/Tic-tac-toe-game'">Visit</button>
                 </div>
@@ -232,23 +229,69 @@
 
     <!--Hobbies-->
     <p class="text-5xl font-bold text-[#F6B17A] text-center pt-20" id="hobbies">Hobbies</p>
-    <div class="grid grid-cols-1">
-        <div class="flex md:flex-row flex-col items-center justify-center md:space-x-5 space-y-2 md:p-5 p-2">
+    <div class="grid sm:grid-cols-2 grid-cols-1 gap-10 md:p-10 p-2 mt-5">
+        <div class="flex lg:flex-row flex-col items-center justify-center md:space-x-5 space-y-2 md:p-5 p-2 bg-[#424769] rounded-xl">
             <div class="flex flex-col items-center justify-center">
-                <p class="text-4xl text-white text-center">My Instagram public account for posting reels related to web design</p>
+                <p class="text-2xl text-white text-center">My Instagram public account for posting reels related to web design</p>
                 <div class="flex flex-row justify-center items-center p-2">
                     <button class="text-lg rounded-lg text-center bg-[#F6B17A] text-black p-2 pr-6 pl-6 hover:bg-white transition-all duration-500" onclick="location.href='https://www.instagram.com/sai_charan_uvaraj/'">Visit</button>
                 </div>
             </div>
             <img class="rounded-lg" src="images/insta.jpg">
         </div>
-        <div class="flex md:flex-row-reverse flex-col items-center justify-center md:space-x-5 space-y-2 md:p-5 p-2 mt-2">
+        <div class="flex lg:flex-row flex-col items-center justify-center md:space-x-5 space-y-2 md:p-5 p-2 bg-[#424769] rounded-xl">
             <div class="flex flex-col items-center justify-center">
-                <p class="text-4xl text-white text-center">An intermediate level chess player</p>
+                <p class="text-2xl text-white text-center">An intermediate chess player</p>
             </div>
             <img class="rounded-lg" src="images/chess.jpg">
         </div>
     </div>
+
+    <!--Qualification-->
+    <p class="text-5xl font-bold text-[#F6B17A] text-center pt-20" id="qualification">Qualifications</p>
+    <div class="flex text-2xl text-white flex-col space-y-3 p-10 bg-[#424769] rounded-xl justify-center items-center md:mr-60 md:ml-60 mr-5 ml-5 mt-10">
+        <p>1. Currently pursuing <b>Mtech CSE (Integrated 5yrs course) in Sri Sairam Engineering College</b>, Chennai</p>
+        <p>2. Did schooling in <b>Doveton ICSE Boys Higher Secondary School (till class 10)</b> and Everwin Vidhyashram CBSE Higher Secondary School (class 11 & 12)</p>
+    </div>
+
+    <!--Contact-->
+    <p class="text-5xl font-bold text-[#F6B17A] text-center pt-20" id="contact">To Contact</p>
+    <div class="grid grid-cols-4 gap-2 text-2xl text-white rounded-xl justify-center items-center md:mr-72 md:ml-72 mr-2 ml-2 mt-10">
+        <div class="flex flex-col justify-center items-center hover:bg-[#F6B17A] transition-all duration-200 rounded-3xl p-2">
+            <svg class="w-20 h-20 active:scale-90 text-gray-800 dark:text-white transition-all duration-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" onclick="location.href='https://www.linkedin.com/in/sai-charan-uvaraj-a7a561257/'">
+                <path fill-rule="evenodd" d="M12.51 8.796v1.697a3.738 3.738 0 0 1 3.288-1.684c3.455 0 4.202 2.16 4.202 4.97V19.5h-3.2v-5.072c0-1.21-.244-2.766-2.128-2.766-1.827 0-2.139 1.317-2.139 2.676V19.5h-3.19V8.796h3.168ZM7.2 6.106a1.61 1.61 0 0 1-.988 1.483 1.595 1.595 0 0 1-1.743-.348A1.607 1.607 0 0 1 5.6 4.5a1.601 1.601 0 0 1 1.6 1.606Z" clip-rule="evenodd"/>
+                <path d="M7.2 8.809H4V19.5h3.2V8.809Z"/>
+            </svg>
+        </div>
+        <div class="flex flex-col justify-center items-center hover:bg-[#F6B17A] transition-all duration-200 rounded-3xl p-2">
+            <svg class="w-20 h-20 active:scale-90 text-gray-800 dark:text-white transition-all duration-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" onclick="location.href='https://www.instagram.com/saicharanuvi_01/'">
+                <path fill="currentColor" fill-rule="evenodd" d="M3 8a5 5 0 0 1 5-5h8a5 5 0 0 1 5 5v8a5 5 0 0 1-5 5H8a5 5 0 0 1-5-5V8Zm5-3a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h8a3 3 0 0 0 3-3V8a3 3 0 0 0-3-3H8Zm7.597 2.214a1 1 0 0 1 1-1h.01a1 1 0 1 1 0 2h-.01a1 1 0 0 1-1-1ZM12 9a3 3 0 1 0 0 6 3 3 0 0 0 0-6Zm-5 3a5 5 0 1 1 10 0 5 5 0 0 1-10 0Z" clip-rule="evenodd"/>
+            </svg>
+        </div>
+        <div class="flex flex-col justify-center items-center hover:bg-[#F6B17A] transition-all duration-200 rounded-3xl p-2">
+            <svg class="w-20 h-20 active:scale-90 text-gray-800 dark:text-white transition-all duration-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" onclick="location.href='https://wa.me/qr/UXY4BBYSQPA3E1'">
+                <path fill="currentColor" fill-rule="evenodd" d="M12 4a8 8 0 0 0-6.895 12.06l.569.718-.697 2.359 2.32-.648.379.243A8 8 0 1 0 12 4ZM2 12C2 6.477 6.477 2 12 2s10 4.477 10 10-4.477 10-10 10a9.96 9.96 0 0 1-5.016-1.347l-4.948 1.382 1.426-4.829-.006-.007-.033-.055A9.958 9.958 0 0 1 2 12Z" clip-rule="evenodd"/>
+                <path fill="currentColor" d="M16.735 13.492c-.038-.018-1.497-.736-1.756-.83a1.008 1.008 0 0 0-.34-.075c-.196 0-.362.098-.49.291-.146.217-.587.732-.723.886-.018.02-.042.045-.057.045-.013 0-.239-.093-.307-.123-1.564-.68-2.751-2.313-2.914-2.589-.023-.04-.024-.057-.024-.057.005-.021.058-.074.085-.101.08-.079.166-.182.249-.283l.117-.14c.121-.14.175-.25.237-.375l.033-.066a.68.68 0 0 0-.02-.64c-.034-.069-.65-1.555-.715-1.711-.158-.377-.366-.552-.655-.552-.027 0 0 0-.112.005-.137.005-.883.104-1.213.311-.35.22-.94.924-.94 2.16 0 1.112.705 2.162 1.008 2.561l.041.06c1.161 1.695 2.608 2.951 4.074 3.537 1.412.564 2.081.63 2.461.63.16 0 .288-.013.4-.024l.072-.007c.488-.043 1.56-.599 1.804-1.276.192-.534.243-1.117.115-1.329-.088-.144-.239-.216-.43-.308Z"/>
+            </svg>  
+        </div>
+        <div class="flex flex-col justify-center items-center hover:bg-[#F6B17A] transition-all duration-200 rounded-3xl p-2">
+            <svg class="w-20 h-20 active:scale-90 text-gray-800 dark:text-white transition-all duration-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" onclick="location.href='https://github.com/SaiCharanUvaraj'">
+                <path fill-rule="evenodd" d="M12.006 2a9.847 9.847 0 0 0-6.484 2.44 10.32 10.32 0 0 0-3.393 6.17 10.48 10.48 0 0 0 1.317 6.955 10.045 10.045 0 0 0 5.4 4.418c.504.095.683-.223.683-.494 0-.245-.01-1.052-.014-1.908-2.78.62-3.366-1.21-3.366-1.21a2.711 2.711 0 0 0-1.11-1.5c-.907-.637.07-.621.07-.621.317.044.62.163.885.346.266.183.487.426.647.71.135.253.318.476.538.655a2.079 2.079 0 0 0 2.37.196c.045-.52.27-1.006.635-1.37-2.219-.259-4.554-1.138-4.554-5.07a4.022 4.022 0 0 1 1.031-2.75 3.77 3.77 0 0 1 .096-2.713s.839-.275 2.749 1.05a9.26 9.26 0 0 1 5.004 0c1.906-1.325 2.74-1.05 2.74-1.05.37.858.406 1.828.101 2.713a4.017 4.017 0 0 1 1.029 2.75c0 3.939-2.339 4.805-4.564 5.058a2.471 2.471 0 0 1 .679 1.897c0 1.372-.012 2.477-.012 2.814 0 .272.18.592.687.492a10.05 10.05 0 0 0 5.388-4.421 10.473 10.473 0 0 0 1.313-6.948 10.32 10.32 0 0 0-3.39-6.165A9.847 9.847 0 0 0 12.007 2Z" clip-rule="evenodd"/>
+            </svg>
+        </div>
+    </div>
+    <div class="flex flex-col justify-center items-center rounded-3xl p-2">
+        <svg class="w-20 h-20 active:scale-90 text-gray-800 dark:text-white transition-all duration-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+            <path fill-rule="evenodd" d="M12.037 21.998a10.313 10.313 0 0 1-7.168-3.049 9.888 9.888 0 0 1-2.868-7.118 9.947 9.947 0 0 1 3.064-6.949A10.37 10.37 0 0 1 12.212 2h.176a9.935 9.935 0 0 1 6.614 2.564L16.457 6.88a6.187 6.187 0 0 0-4.131-1.566 6.9 6.9 0 0 0-4.794 1.913 6.618 6.618 0 0 0-2.045 4.657 6.608 6.608 0 0 0 1.882 4.723 6.891 6.891 0 0 0 4.725 2.07h.143c1.41.072 2.8-.354 3.917-1.2a5.77 5.77 0 0 0 2.172-3.41l.043-.117H12.22v-3.41h9.678c.075.617.109 1.238.1 1.859-.099 5.741-4.017 9.6-9.746 9.6l-.215-.002Z" clip-rule="evenodd"/>
+        </svg>  
+        <p class="text-lg text-white">saicharanuvi01@gmail.com</p>
+    </div>
+    <div class="flex flex-row justify-center items-center p-2 mt-10 mb-20" id="resume">
+        <button class=" text-xl rounded-lg text-center bg-[#F6B17A] text-black p-2 hover:bg-white transition-all duration-200"><a href="resume.pdf">View and download my resume</a></button>
+    </div>
+    <footer class="h-28 bg-[#F6B17A] flex flex-col justify-center items-center text-[#424769] font-extrabold text-3xl">
+        <p>Bye...</p>
+    </footer>
 </body>
 <script>
     const button=document.querySelector("button.toggler");
