--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
             <p class="text-[#ffff]  font-bold text-4xl">Aspiring Full Stack Developer</p>
         </div>
         <div class="lg:flex items-center justify-center grid gap-2 lg:gap-2">
-            <img src="images/profile1.jpg" class="hidden lg:block lg:w-40 lg:h-40 h-80 w-80 rounded-full border-8 border-solid border-[#F6B17A]">
-            <img src="images/profile4.jpg" class="lg:w-50 lg:h-50 h-80 w-80 rounded-full  border-8 border-solid border-[#F6B17A]">
-            <img src="images/profile2.jpg" class="hidden lg:block lg:w-40 lg:h-40 h-80 w-80 rounded-full  border-8 border-solid border-[#F6B17A]">
+            <img src="images/profile1.jpg" class="h-80 w-80 rounded-full border-8 border-solid border-[#F6B17A]">
         </div>
     </div>
 
